<resources>
    <string name="app_name">바른순프로젝트</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="btn_signup">e-mail Sign Up</string>
    <string name="btn_signin">Sign In</string>
    <string name="hint_email">input your e-mail</string>
    <string name="hint_password">input your password</string>
    <string name="success_signup">Signed Up Successfully!</string>
    <string name="failed_signup">Failed Signup</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="방만들기">방만들기</string>
    <string name="초대하기">초대하기</string>

    <string name="success_login">Login Success!</string>
    <string name="failed_login">Login Failed !</string>

    <string name="facebook_app_id">359271694989738</string>
    <string name="fb_login_protocol_scheme">fb359271694989738</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="직위">직위</string>
    <string name="팀원추가">+ 팀원추가</string>
    <string name="팀원">팀원</string>
    <string name="addTeam">팀원추가</string>
    <string name="cancle">취소</string>
    <string name="ok">확인</string>
    <string name="n">n명</string>
    <string name="nickname">NickName</string>
    <string name="강퇴">강퇴</string>
    <string name="추천">추천</string>
    <string name="camera_result">점수 값 출력</string>
    <string name="todo">TODO</string>
    <string name="camera_score_pic">스코어 사진찍기</string>

    <string name="ask">점수가 맞으면 확인 버튼을 눌러주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
