<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/lusplash" />

        <TextView
            android:id="@+id/NickName"
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:text="@string/nickname"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_chu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#7B3EBC"
            android:text="@string/추천"
            android:textColor="#ffffff"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F35B55"
            android:text="@string/강퇴"
            android:textColor="#ffffff"
            android:textSize="36sp" />

    </LinearLayout>

</LinearLayout>