<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameRoomPkg.GameRoomActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="68dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="95dp"
        android:background="#FFC002"
        android:text="@string/직위"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="86dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/lusplash"
        android:contentDescription="@string/todo" />

    <Spinner
        android:id="@+id/gameselect"
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="148dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addteam"
        android:layout_width="96dp"
        android:layout_height="35dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="158dp"
        android:background="#7B3EBC"
        android:textColor="#ffffff"
        android:text="@string/팀원추가"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/gameselect" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="331dp"
        android:background="#FFC002"
        android:text="@string/팀원"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="31dp"
        android:text="@string/n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:text="@string/nickname"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:background="#F35B55"
        android:text="@string/강퇴"
        android:textColor="#ffffff"
        android:textSize="36sp"
        tools:layout_editor_absoluteY="304dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/lusplash"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/button_chu"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:background="#7B3EBC"
        android:text="@string/추천"
        android:textColor="#ffffff"
        android:textSize="36sp"
        tools:layout_editor_absoluteY="304dp" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="411dp"
        android:layout_height="427dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>