<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#7a3dbc">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="123dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lu" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="295dp"
        android:layout_height="88dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#ffffffff"
            android:theme="@style/EditTheme" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#ffffffff"
            android:theme="@style/EditTheme" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="@drawable/edge"
            android:text="@string/btn_signin" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/Google_Login"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

        </com.google.android.gms.common.SignInButton>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edge"
            android:text="@string/btn_signup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>